# oilftir

./: LICENSE  README.md  citation.cff  example.py  pyproject.toml  setup.py
data/: fresh_oil.txt  ftir_example.sp  unknown_oil.sp
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/.doctrees/autoapi/oilftir/: index.doctree
docs/_build/html/.doctrees/autoapi/oilftir/astm_utils/: index.doctree
docs/_build/html/_modules/: index.html  oilftir.html
docs/_build/html/_modules/oilftir/: astm_utils.html
docs/_build/html/_sources/: quickstart.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/oilftir/: index.rst.txt
docs/_build/html/_sources/autoapi/oilftir/astm_utils/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/oilftir/: index.html
docs/_build/html/autoapi/oilftir/astm_utils/: index.html
oilftir/: .readthedocs.yaml  __init__.py  astm_utils.py  init.py
oilftir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
