[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oilftir"
version = "0.1.0"
description = "FTIR-based condition monitoring of lubricating oils — ASTM E2412 toolkit"
authors = [
  { name = "Nahuel Mendez", email = "nahueldanielmendez@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "pybaselines",
]

[project.optional-dependencies]
specio = ["specio"]

[project.urls]
Homepage   = "https://github.com/NahueMendez/oilftir"
LinkedIn   = "https://www.linkedin.com/in/ingnahuelmendez/"

[tool.setuptools.packages.find]
where = ["."]
include = ["oilftir*"]
