[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oilftir"
version = "0.1.1"
description = "FTIR-based condition monitoring of lubricating oils — ASTM E2412 toolkit"
authors = [
  { name = "Nahuel Mendez", email = "nahueldanielmendez@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ftir", "astm-e2412", "lubricating-oil", "condition-monitoring", "spectroscopy", "tribology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "pybaselines",
]

[project.optional-dependencies]
specio = ["specio"]

[project.urls]
Homepage   = "https://github.com/NahueMendez/oilftir"
Documentation = "https://oilftir.readthedocs.io/en/latest/"
LinkedIn   = "https://www.linkedin.com/in/ingnahuelmendez/"

[tool.setuptools.packages.find]
where = ["."]
include = ["oilftir*"]
